--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+QUEUE_CONNECTION=database
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
@@ -28,13 +30,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_MAILER=mailgun
+MAILGUN_DOMAIN=www.tantalizersng.com
+MAILGUN_SECRET=6c53cc87fbf27f4c962f747e03b48097-b6190e87-3548afa9
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=587
+MAIL_USERNAME=postmaster@www.tantalizersng.com
+MAIL_PASSWORD=8489f68e21f9565c8e98205a4feeb9be-b6190e87-c8aaa261
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=bookdical@bookdical.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
